[package]
name = "ckf"
version = "0.1.0"
edition = "2021"
authors = ["M0niusPlus <M0niusPlus@gmail.com>"]
repository = "https://github.com/AUTOM77/CKF"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
druid = "0.8.3"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
incremental = true

[build]
rustflags = ["-Z", "threads=8"]